--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <artifactId>analytics-legacy</artifactId>
+    <groupId>org.gorchestra</groupId>
+    <version>1.0-SNAPSHOT</version>
     <parent>
-        <groupId>org.georchestra</groupId>
-        <artifactId>root</artifactId>
-        <version>25.1-SNAPSHOT</version>
+        <!-- Depending on a released version of spring-boot-dependencies provides a curated list of dependency versions for all
+          modules. See https://github.com/spring-projects/spring-boot/blob/v1.5.19.RELEASE/spring-boot-dependencies/pom.xml which is
+          the last release of the 1.x series, defining dependencies for Spring 4.3.22.RELEASE and related dependencies that are known
+          to work well with that spring version -->
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>2.7.18</version>
     </parent>
-    <artifactId>analytics</artifactId>
     <packaging>war</packaging>
     <name>Analytics webapp</name>
     <description>
@@ -17,11 +23,15 @@
     <url>http://www.georchestra.org</url>
     <properties>
         <context.name>${project.artifactId}</context.name>
+        <log4j1.version>1.2.17</log4j1.version>
+        <json.version>20180813</json.version>
+        <packageDatadirScmVersion>master</packageDatadirScmVersion>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>extjs</artifactId>
+            <version>4.1.1a</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -41,6 +51,7 @@
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -58,6 +69,7 @@
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
+            <version>${javax-validation.version}</version>
             <classifier/>
         </dependency>
         <dependency>
@@ -68,16 +80,19 @@
         <dependency>
             <groupId>org.jsondoc</groupId>
             <artifactId>jsondoc-core</artifactId>
+            <version>1.2.11</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>apache-log4j-extras</artifactId>
+            <version>1.1</version>
             <type>jar</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.tuckey</groupId>
             <artifactId>urlrewritefilter</artifactId>
+            <version>4.0.4</version>
             <exclusions>
                 <exclusion>
                     <groupId>commons-logging</groupId>
@@ -96,6 +111,7 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
+            <version>${log4j1.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
@@ -111,6 +127,7 @@
         <dependency>
             <groupId>taglibs</groupId>
             <artifactId>standard</artifactId>
+            <version>1.1.2</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -119,6 +136,7 @@
         <dependency>
             <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
+            <version>0.10.1</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -127,7 +145,7 @@
         <dependency>
             <groupId>org.georchestra</groupId>
             <artifactId>georchestra-commons</artifactId>
-            <version>${project.version}</version>
+            <version>25.0.0</version>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
@@ -587,4 +605,45 @@
             </build>
         </profile>
     </profiles>
+    <repositories>
+        <repository>
+            <snapshots>
+                <enabled>true</enabled>
+                <checksumPolicy>ignore</checksumPolicy>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+                <checksumPolicy>ignore</checksumPolicy>
+                <updatePolicy>always</updatePolicy>
+            </releases>
+            <id>georchestra</id>
+            <url>https://artifactory.georchestra.org/artifactory/maven</url>
+        </repository>
+        <repository>
+            <id>osgeo</id>
+            <name>OSGeo Nexus Release Repository</name>
+            <url>https://repo.osgeo.org/repository/release/</url>
+            <!-- contains release (including third-party-dependences)                            -->
+            <!-- ucar (https://artifacts.unidata.ucar.edu/content/repositories/unidata-releases) -->
+            <!-- geosolutions (http://maven.geo-solutions.it/)                                   -->
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+        <repository>
+            <id>osgeo-snapshot</id>
+            <name>OSGeo Nexus Snapshot Repository</name>
+            <url>https://repo.osgeo.org/repository/snapshot/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+    </repositories>
 </project>
